--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -522,7 +522,7 @@
           <i class="fas fa-home"></i>
           <p>Home</p>
         </div>
-        <div>
+        <div onclick="window.location.href='customer.html'">
           <i class="fas fa-users"></i>
           <p>Customers</p>
         </div>
